--- a/index.html
+++ b/index.html
@@ -7,36 +7,37 @@
     <title>Patricia y Josema</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./index.js"></script>
+    <link rel="icon" href="./src/favicon.png" type="image/x-icon">
 </head>
 
 <body>
     <div class="contenedor">
 
-        <img src="./src/1.gif" alt="" class="gif" id="gif1">
+        <img src="./src/1.gif" alt="" class="gif" id="gif1" loading="lazy">
 
-        <img src="./src/2.gif" alt="" class="gif" id="gif2">
+        <img src="./src/2.gif" alt="" class="gif" id="gif2" loading="lazy">
 
-        <img src="./src/3.gif" alt="" class="gif" id="gif3">
+        <img src="./src/3.gif" alt="" class="gif" id="gif3" loading="lazy">
 
-        <img src="./src/4.gif" alt="" class="gif" id="gif4">
+        <img src="./src/4.gif" alt="" class="gif" id="gif4" loading="lazy">
 
-        <img src="./src/5.gif" alt="" class="gif" id="gif5">
+        <img src="./src/5.gif" alt="" class="gif" id="gif5" loading="lazy">
         <button class="mapaiglesa"><a href="https://maps.app.goo.gl/54Ts8DWPSTjAW7jt6" target="_blank">maps</a></button>
 
-        <img src="./src/6.gif" alt="" class="gif" id="gif6">
+        <img src="./src/6.gif" alt="" class="gif" id="gif6" loading="lazy">
         <button class="mapaplantio"><a href="https://maps.app.goo.gl/jwtEbbkzeCDi4FCm9"
                 target="_blank">maps</a></button>
 
-        <img src="./src/7.gif" alt="" class="gif" id="gif7">
+        <img src="./src/7.gif" alt="" class="gif" id="gif7" loading="lazy">
         <button class="formulario"><a href="https://forms.gle/WsWxKykqRukJKDwe7" target="_blank">Formulario</a></button>
 
 
-        <img src="./src/8.gif" alt="" class="gif" id="gif8">
+        <img src="./src/8.gif" alt="" class="gif" id="gif8" loading="lazy">
         <button class="nCuenta"><a href="./cuenta.html" target="_blank">Cuenta</a></button>
 
-        <img src="./src/9.gif" alt="" class="gif" id="gif9">
+        <img src="./src/9.gif" alt="" class="gif" id="gif9" loading="lazy">
 
-        <img src="./src/10.gif" alt="" class="gif" id="gif10">
+        <img src="./src/10.gif" alt="" class="gif" id="gif10" loading="lazy">
     </div>
 </body>
 
