--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boda Patricia y JoseMaa</title>
+    <title>Boda Patri y JoseMa</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./index.js"></script>
     <link rel="icon" href="./src/favicon.png" type="image/x-icon">
