añadido audio e imagenes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 target="_blank">maps</a></button>
 
         <img src="./src/7.gif" alt="" class="gif" id="gif7" loading="lazy">
-        <button class="formulario"><a href="https://forms.gle/WsWxKykqRukJKDwe7" target="_blank">Formulario</a></button>
+        <button class="formulario"><a href="https://forms.gle/WsWxKykqRukJKDwe7">Formulario</a></button>
 
 
         <img src="./src/8.gif" alt="" class="gif" id="gif8" loading="lazy">
@@ -39,6 +39,10 @@
 
         <img src="./src/10.gif" alt="" class="gif" id="gif10" loading="lazy">
     </div>
+    <audio loop id="miAudio">
+        <source src="./Thank you for loving me - Bon Jovi (Violin)_2JIIjn3KH-U.mp3" type="audio/mp3">
+        Tu navegador no soporta la etiqueta de audio.
+    </audio>
 </body>
 
 </html>
