add new music probed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="contenedor">
+    <div class="contenedor" onclick="reproducirMusica()">
 
         <img src="./src/1.gif" alt="" class="gif" id="gif1" loading="lazy">
 
@@ -39,7 +39,7 @@
 
         <img src="./src/10.gif" alt="" class="gif" id="gif10" loading="lazy">
     </div>
-    <audio loop id="miAudio">
+    <audio id="miAudio" autoplay loop>
         <source src="./Thank you for loving me - Bon Jovi (Violin)_2JIIjn3KH-U.mp3" type="audio/mp3">
         Tu navegador no soporta la etiqueta de audio.
     </audio>
