--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
 <body>
     <div class="contenedor" onclick="reproducirMusica()">
+
         <img src="./src/Clickaqui.png" alt="" class="gif" id="gifprincipal" loading="lazy">
         <button class="clickmusic"><a href="#gif1">click</a></button>
 
 
-        <img src="./src/1.png" alt="" class="gif" id="gif1" loading="lazy">
+        <img src="./src/1.gif" alt="" class="gif" id="gif1" loading="lazy">
 
         <img src="./src/2.png" alt="" class="gif" id="gif2" loading="lazy">
 
@@ -40,7 +41,7 @@
 
         <img src="./src/9.png" alt="" class="gif" id="gif9" loading="lazy">
 
-        <img src="./src/10.png" alt="" class="gif" id="gif10" loading="lazy">
+        <img src="./src/10.gif" alt="" class="gif" id="gif10" loading="lazy">
     </div>
     <audio id="miAudio" autoplay loop>
         <source src="./Thank you for loving me - Bon Jovi (Violin)_2JIIjn3KH-U.mp3" type="audio/mp3">
