--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
 
         <img src="./src/1.gif" alt="" class="gif" id="gif1" loading="lazy">
 
-        <img src="./src/2.png" alt="" class="gif" id="gif2" loading="lazy">
+        <img src="./src/2.gif" alt="" class="gif" id="gif2" loading="lazy">
 
-        <img src="./src/3.png" alt="" class="gif" id="gif3" loading="lazy">
+        <img src="./src/3.gif" alt="" class="gif" id="gif3" loading="lazy">
 
-        <img src="./src/4.png" alt="" class="gif" id="gif4" loading="lazy">
+        <img src="./src/4.gif" alt="" class="gif" id="gif4" loading="lazy">
 
-        <img src="./src/5.png" alt="" class="gif" id="gif5" loading="lazy">
+        <img src="./src/5.gif" alt="" class="gif" id="gif5" loading="lazy">
         <button class="mapaiglesa"><a href="https://maps.app.goo.gl/54Ts8DWPSTjAW7jt6" target="_blank">maps</a></button>
 
-        <img src="./src/6.png" alt="" class="gif" id="gif6" loading="lazy">
+        <img src="./src/6.gif" alt="" class="gif" id="gif6" loading="lazy">
         <button class="mapaplantio"><a href="https://maps.app.goo.gl/jwtEbbkzeCDi4FCm9"
                 target="_blank">maps</a></button>
 
-        <img src="./src/7.png" alt="" class="gif" id="gif7" loading="lazy">
-        <button class="formulario"><a href="https://forms.gle/WsWxKykqRukJKDwe7">Formulario</a></button>
+        <img src="./src/7.gif" alt="" class="gif" id="gif7" loading="lazy">
+        <button class="formulario"><a href="https://forms.gle/WsWxKykqRukJKDwe7" target="_blank">Formulario</a></button>
 
 
-        <img src="./src/8.png" alt="" class="gif" id="gif8" loading="lazy">
+        <img src="./src/8.gif" alt="" class="gif" id="gif8" loading="lazy">
         <button class="nCuenta"><a href="./cuenta.html" target="_blank">Cuenta</a></button>
 
-        <img src="./src/9.png" alt="" class="gif" id="gif9" loading="lazy">
+        <img src="./src/9.gif" alt="" class="gif" id="gif9" loading="lazy">
 
         <img src="./src/10.gif" alt="" class="gif" id="gif10" loading="lazy">
     </div>
